additions and optimizations after profiling

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "falseclock/dbd-php-common": "dev-master"
   },
   "require-dev": {
+    "apache/log4php":            "^2.3"
   },
   "suggest": {
   },
