--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Falseclock\\DBD\\Entity\\": "src/"
+      "DBD\\Entity\\": "src/"
     }
   },
   "autoload-dev": {
