--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: php
-php:
-  - '7.1'
+sudo: false
 
-branches:
-    only:
-        - master
+dist: trusty
+
+php:
+  - 7.2
+  - 7.3
+  - 7.4
+
+before_script:
+  - composer install
+
+script:
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - vendor/bin/coveralls --verbose
