--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ script:
   - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
-  - vendor/bin/coveralls --verbose
+  - vendor/bin/php-coveralls --verbose
