--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     }
   ],
   "require": {
-    "php":                       "^7.1",
-    "ext-json":                  "*",
-    "myclabs/php-enum":          "^1.7.7",
+    "php": "^7.1|^8.0",
+    "ext-json": "*",
+    "myclabs/php-enum": "^1.7.7",
     "falseclock/dbd-php-common": "dev-master"
   },
   "require-dev": {
