--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "falseclock/dbd-php-entity",
   "type": "library",
+  "version": "3.0.0",
   "description": "DTO like library to fetch any data in an Object-Oriented manner (ORM)",
   "keywords": [
     "dbd",
@@ -23,7 +24,7 @@
     }
   ],
   "require": {
-    "php": "^7.1|^8.0",
+    "php": "^8.0",
     "ext-json": "*",
     "myclabs/php-enum": "^1.7.7"
   },
