--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
   "require": {
     "php": "^8.0",
     "ext-json": "*",
-    "myclabs/php-enum": "^1.7.7"
+    "myclabs/php-enum": "^1.8.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.20",
-    "php-coveralls/php-coveralls": "^2.5.2"
+    "phpunit/phpunit": "^11.2.5",
+    "php-coveralls/php-coveralls": "^v2.7.0"
   },
   "autoload": {
     "psr-4": {
@@ -39,9 +39,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "DBD\\Entity\\Tests\\": "tests/DBD/Entity/Tests/",
-      "DBD\\Common\\Tests\\": "tests/DBD/Common/Tests/",
-      "DBD\\Common\\Tests\\Fixtures\\": "tests/DBD/Common/Tests/Fixtures"
+      "DBD\\": "tests/DBD/"
     },
     "files": [
       "tests/DBD/Entity/Tests/Entities/PersonBase.php",
