--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "falseclock/dbd-php-entity",
   "type": "library",
-  "version": "3.0.0",
+  "version": "3.1.0-RC1",
   "description": "DTO like library to fetch any data in an Object-Oriented manner (ORM)",
   "keywords": [
     "dbd",
@@ -29,7 +29,7 @@
     "myclabs/php-enum": "^1.8.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.2.5",
+    "phpunit/phpunit": "^11.2.7",
     "php-coveralls/php-coveralls": "^v2.7.0"
   },
   "autoload": {
