--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "falseclock/dbd-php-entity",
   "type": "library",
-  "version": "3.1.0-RC1",
+  "version": "3.1.0",
   "description": "DTO like library to fetch any data in an Object-Oriented manner (ORM)",
   "keywords": [
     "dbd",
@@ -24,12 +24,12 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.2",
     "ext-json": "*",
     "myclabs/php-enum": "^1.8.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.2.7",
+    "phpunit/phpunit": "^11.2.8",
     "php-coveralls/php-coveralls": "^v2.7.0"
   },
   "autoload": {
